Allow multiple instances to exist on a page
Moving the core of the plugin to an object.
This will allow each instance of an editor to have its own settings.

IMPORTANT:
This will break the current usage of the PlaceholdersCollection object.
 - Old: editor.plugins.placeholder_elements.placeholders.reset()
 - New: editor.plugins.placeholder_elements.instances[editor.id].placeholders.reset()

Resolves: #7

--- a/tests/index.html
+++ b/tests/index.html
@@ -27,8 +27,9 @@
 						assert.ok(true, 'editor instance ready');
 						done();
 
-						var plugin = CKEDITOR.instances.textarea1.plugins.placeholder_elements;
-						var PlaceholdersCollectionClass = plugin.placeholders.__proto__.constructor;
+						var editor = CKEDITOR.instances.textarea1;
+						var plugin = editor.plugins.placeholder_elements;
+						var PlaceholdersCollectionClass = plugin.instances[editor.id].placeholders.__proto__.constructor;
 
 						QUnit.test('add() test', function(assert)
 						{
